--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
             color: #7ee777;
             font:208px "Consolas";
             text-align: center;
-            font-style: italic;
             user-select: none;
+            transition: color 0.2s;
+        }
+        h1:hover {
+            color: #7ee777;
         }
         a {
             text-decoration: none;
